# modules/permission/infra/model/gorm_permission_repo.go
@@ -2,11 +2,12 @@ package model
 
 import (
 	"context"
+	"reflect"
+
 	"github.com/oechsler-it/identity/modules/permission/domain"
 	"github.com/oechsler-it/identity/runtime"
 	"github.com/sirupsen/logrus"
 	"gorm.io/gorm"
-	"reflect"
 )
 
 type GormPermissionRepo struct {
@@ -31,7 +32,23 @@ func NewGormPermissionRepo(
 	}
 }
 
-func (m *GormPermissionRepo) FindByName(_ context.Context, name string) (*domain.Permission, error) {
+func (m *GormPermissionRepo) FindAll(_ context.Context) ([]*domain.Permission, error) {
+	var models []GormPermissionModel
+	if err := m.database.Find(&models).Error; err != nil {
+		return nil, err
+	}
+	permissions := make([]*domain.Permission, len(models))
+	for i, model := range models {
+		permission, err := m.toPermission(model)
+		if err != nil {
+			return nil, err
+		}
+		permissions[i] = permission
+	}
+	return permissions, nil
+}
+
+func (m *GormPermissionRepo) FindByName(_ context.Context, name domain.PermissionName) (*domain.Permission, error) {
 	var model GormPermissionModel
 	if err := m.database.Where("name = ?", name).First(&model).Error; err != nil {
 		return nil, domain.ErrPermissionNotFound
@@ -40,12 +57,42 @@ func (m *GormPermissionRepo) FindByName(_ context.Context, name string) (*domain
 }
 
 func (m *GormPermissionRepo) Create(ctx context.Context, permission *domain.Permission) error {
-	if _, err := m.FindByName(ctx, string(permission.Name)); err == nil {
+	if _, err := m.FindByName(ctx, permission.Name); err == nil {
 		return domain.ErrPermissionAlreadyExists
 	}
 
 	model := m.toModel(permission)
 	return m.database.Create(&model).Error
+}
+
+func (m *GormPermissionRepo) Update(ctx context.Context, name domain.PermissionName, handler func(permission *domain.Permission) error) error {
+	permission, err := m.FindByName(ctx, name)
+	if err != nil {
+		return err
+	}
+
+	if err := handler(permission); err != nil {
+		return err
+	}
+
+	permission.Name = name
+	model := m.toModel(permission)
+	return m.database.Save(&model).Error
+}
+
+func (m *GormPermissionRepo) Delete(ctx context.Context, name domain.PermissionName, handler func(permission *domain.Permission) error) error {
+	permission, err := m.FindByName(ctx, name)
+	if err != nil {
+		return err
+	}
+
+	if err := handler(permission); err != nil {
+		return err
+	}
+
+	permission.Name = name
+	model := m.toModel(permission)
+	return m.database.Delete(&model).Error
 }
 
 func (m *GormPermissionRepo) toPermission(model GormPermissionModel) (*domain.Permission, error) {
